Fri Mar 26 04:00:14 1993  Gray Watson  (gray at toaster.antaire.com)

	* Upgraded to 1.1.6

	* Found some problems with malloc debug codes.  Use of DB_FENCE
	and CHECK_LISTS and some others were improper.  A MALLOC_DEBUG
	value of 0x403000 would crash all malloc programs.

	* Added some better comments to all files and cleaned up most
	files too.

Fri Mar 12 18:35:02 1993  Gray Watson  (gray at toaster.antaire.com)

	* Upgraded to 1.1.5.

Sat Feb 13 17:25:43 1993  Gray Watson  (gray at toaster.antaire.com)

	* Finished add a number of const operators to improve coding per
	scott's recommendations.

Sat Jan 30 12:33:43 1993  Gray Watson  (gray at toaster.antaire.com)

	* Took out the check_vars call inside of malloc_strerror since
	_malloc_perror calls malloc_strerror which would go quickly
	recursive.  Thanks scott.

	* Changed to version 1.1.4

Tue Jan  5 00:00:00 1993  Gray Watson  (gray at toaster.antaire.com)

	* Sent off 1.1.3 shar files to comp.sources.unix.

Sat Jan  2 00:16:58 1993  Gray Watson  (gray at toaster.antaire.com)

	* Made last minute changes to solve some gcc/ansi errors and
	to the manual to get things ready for the post.

Sun Dec 27 20:28:19 1992  Gray Watson  (gray at toaster.antaire.com)

	* Fixed problem with some external functions in malloc.c not
	reseting the in_alloc flag.  Also removed some testing of unsigned
	variables < 0 in chunk.c per gcc 2.3.3 warnings.

	* Changed version to 1.1.3.

Mon Dec 21 15:31:50 1992  Gray Watson  (gray at toaster.antaire.com)

	* Created the series of shar files in preparation to posting to
	comp.unix.sources.  Looking good.

Thu Dec 17 18:33:38 1992  Gray Watson  (gray at toaster.antaire.com)

	* Renamed a number of files to comply with the Sys5 12 character
	restrictions (14 - 2 for RCS/CVS/SCCS).  Yeach.  malloc_debug ->
	malloc_dbg.

Sat Nov 14 15:59:53 1992  Gray Watson  (gray at toaster.antaire.com)

	* Added all external functions to configure and conf.h even though